<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>decentralized-identity</groupId>
	<artifactId>uni-resolver</artifactId>
	<packaging>pom</packaging>
	<version>0.3-SNAPSHOT</version>
	<name>uni-resolver</name>
	<description>A Universal Resolver for decentralized identity.</description>
	<url>https://uniresolver.io/</url>

	<developers>
		<developer>
			<name>Markus Sabadello</name>
			<email>markus@danubetech.com</email>
			<organization>Danube Tech</organization>
			<organizationUrl>https://danubetech.com/</organizationUrl>
		</developer>
		<developer>
			<name>Cihan Saglam</name>
			<email>cihan.saglam@danubetech.com</email>
			<organization>Danube Tech</organization>
			<organizationUrl>https://danubetech.com/</organizationUrl>
		</developer>
	</developers>

	<modules>
		<module>uni-resolver-core</module>
		<module>uni-resolver-local</module>
		<module>uni-resolver-client</module>
		<module>uni-resolver-web</module>
		<module>driver</module>
		<module>driver-http</module>
	</modules>

	<scm>
		<url>https://github.com/decentralized-identity/universal-resolver</url>
		<connection>scm:git:git://github.com/decentralized-identity/universal-resolver.git</connection>
		<developerConnection>scm:git:git@github.com:decentralized-identity/universal-resolver.git</developerConnection>
	</scm>

	<issueManagement>
		<url>https://github.com/decentralized-identity/universal-resolver/issues</url>
		<system>GitHub Issues</system>
	</issueManagement>

	<distributionManagement>
		<snapshotRepository>
			<id>danubetech-maven-snapshots</id>
			<url>https://repo.danubetech.com/repository/maven-snapshots/</url>
		</snapshotRepository>
		<repository>
			<id>danubetech-maven-releases</id>
			<url>https://repo.danubetech.com/repository/maven-releases/</url>
		</repository>
	</distributionManagement>

	<repositories>
		<repository>
			<id>danubetech-maven-public</id>
			<url>https://repo.danubetech.com/repository/maven-public/</url>
		</repository>
	</repositories>

	<properties>

		<!-- Project Properties -->

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>11</java.version>
		<github.global.server>github</github.global.server>
		<project.build.timestamp>${maven.build.timestamp}</project.build.timestamp>

		<!-- Dependency Versions -->

		<key-formats-java.version>0.1.1</key-formats-java.version>
		<did-common-java.version>0.3-SNAPSHOT</did-common-java.version>

		<eclipse.jetty.version>9.4.18.v20190429</eclipse.jetty.version>
		<slf4j.version>1.7.25</slf4j.version>
		<apache.log4j.version>2.13.3</apache.log4j.version>
		<fasterxml.jackson.version>2.11.2</fasterxml.jackson.version>
		<gson.version>2.8.6</gson.version>
		<commons-codec.version>1.14</commons-codec.version>
		<httpclient.version>4.5.13</httpclient.version>
		<javax.servlet.version>2.5</javax.servlet.version>
		<springframework.version>5.2.9.RELEASE</springframework.version>
		<junit.version>4.13.1</junit.version>

		<!-- Plugin Versions -->

		<maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
		<maven-war-plugin.version>3.2.3</maven-war-plugin.version>
		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
		<maven-source-plugin.version>3.2.1</maven-source-plugin.version>
		<maven-dependency-plugin.version>3.1.2</maven-dependency-plugin.version>
		<maven-scm-plugin.version>1.11.2</maven-scm-plugin.version>
		<maven-release-plugin.version>3.0.0-M1</maven-release-plugin.version>
		<maven-deploy-plugin.version>3.0.0-M1</maven-deploy-plugin.version>
	</properties>

	<build>
		<resources>
			<resource>
				<directory>${project.basedir}/src/main/resources/</directory>
				<filtering>false</filtering>
				<includes>
					<include>**/*</include>
				</includes>
				<excludes>
					<exclude>**/*.properties</exclude>
				</excludes>
			</resource>
			<resource>
				<directory>${project.basedir}/src/main/resources/</directory>
				<filtering>true</filtering>
				<includes>
					<include>**/*.properties</include>
				</includes>
			</resource>
		</resources>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven-compiler-plugin.version}</version>
					<configuration>
						<release>${java.version}</release>
						<forceJavacCompilerUse>true</forceJavacCompilerUse>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>${maven-source-plugin.version}</version>
					<executions>
						<execution>
							<goals>
								<goal>jar-no-fork</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${maven-surefire-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>${maven-dependency-plugin.version}</version>
					<executions>
						<execution>
							<id>execution</id>
							<phase>package</phase>
							<goals>
								<goal>copy-dependencies</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<includeScope>runtime</includeScope>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>${maven-release-plugin.version}</version>
					<configuration>
						<tagNameFormat>v@{project.version}</tagNameFormat>
						<scmReleaseCommitComment>Latest Release @{releaseLabel}</scmReleaseCommitComment>
						<pomFileName>pom.xml</pomFileName>
					</configuration>
					<dependencies>
						<dependency>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-scm-plugin</artifactId>
							<version>${maven-scm-plugin.version}</version>
						</dependency>
					</dependencies>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-war-plugin</artifactId>
					<version>${maven-war-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.jetty</groupId>
					<artifactId>jetty-maven-plugin</artifactId>
					<version>${eclipse.jetty.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>${maven-deploy-plugin.version}</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>decentralized-identity</groupId>
				<artifactId>uni-resolver-core</artifactId>
				<version>${project.parent.version}</version>
			</dependency>
			<dependency>
				<groupId>decentralized-identity</groupId>
				<artifactId>uni-resolver-local</artifactId>
				<version>${project.parent.version}</version>
			</dependency>
			<dependency>
				<groupId>decentralized-identity</groupId>
				<artifactId>uni-resolver-client</artifactId>
				<version>${project.parent.version}</version>
			</dependency>
			<dependency>
				<groupId>decentralized-identity</groupId>
				<artifactId>uni-resolver-web</artifactId>
				<version>${project.parent.version}</version>
			</dependency>
			<dependency>
				<groupId>decentralized-identity</groupId>
				<artifactId>uni-resolver-driver</artifactId>
				<version>${project.parent.version}</version>
			</dependency>
			<dependency>
				<groupId>decentralized-identity</groupId>
				<artifactId>uni-resolver-driver-http</artifactId>
				<version>${project.parent.version}</version>
			</dependency>
			<dependency>
				<groupId>decentralized-identity</groupId>
				<artifactId>did-common-java</artifactId>
				<version>${did-common-java.version}</version>
			</dependency>
			<dependency>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-maven-plugin</artifactId>
				<version>${eclipse.jetty.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-core</artifactId>
				<version>${fasterxml.jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-annotations</artifactId>
				<version>${fasterxml.jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>${maven-war-plugin.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>${fasterxml.jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.httpcomponents</groupId>
				<artifactId>httpclient</artifactId>
				<version>${httpclient.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-web</artifactId>
				<version>${springframework.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-context</artifactId>
				<version>${springframework.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-codec</groupId>
				<artifactId>commons-codec</artifactId>
				<version>${commons-codec.version}</version>
			</dependency>
			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>servlet-api</artifactId>
				<version>${javax.servlet.version}</version>
			</dependency>
			<dependency>
				<groupId>com.google.code.gson</groupId>
				<artifactId>gson</artifactId>
				<version>${gson.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>jcl-over-slf4j</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-log4j12</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-slf4j-impl</artifactId>
				<version>${apache.log4j.version}</version>
			</dependency>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
		</dependency>
	</dependencies>

</project>
